Blender crashes on FBX export instantly. #40405

Closed
opened 2014-05-28 11:42:51 +02:00 by Dancuka · 10 comments
Dancuka commented 2014-05-28 11:42:51 +02:00 (Migrated from localhost:3001)

System Information
Windows 7 , GTX650TI

Blender Version
Broken: 2.70a official Hash: 19e627c
Worked: 2.68.0 r58537

Blender crashes and closes instantly if exporting object with faulty and flipped normals. At least that is what I think is the cause. I managed to test this and also pinpointed how to fix it. The cause seems to be some flipped normals on faces. If some of the normals on faces on the same mesh are flipped or it has 2 faces on it self(double sided) the export crashes. I think that the mesh in the attached scene was created the way that the faces were duplicated on the same location and flipped (to create 2sided effect maybe) but then the automerge vertexes was on and the mesh got messed up when points got welded. So some of the face-normals are up and some are down.

Exact steps for others to reproduce the error
1, Select object in scene, notice that some of the normals are messed up. Dont fix them yet.
2, Try exporting fbx with the following setting on the FBXexporter: Everthing disabled, except "apply modifiers". Only export "mesh" tab selected also. (not sure if these settings matter but these were my settings) Sometimes it crashes with OBJ exporting also but that seems more random. Might have to do something with the export settings.
3, When pressing export button Blender closes instantly(crash). A file might be outputted but its corrupted.

HOW TO FIX:

If you select all the mesh in editmode and press "Recalculate Normals" the face-normals are on the same side. Try exporting it works. BUT: I tried exporting in 2.68 with the messed up normals and it worked fine there. The normals are just flipped and messed up but the exporting works there. This crashing seems to happen only in the recent builds.export_crashtest.blend

**System Information** Windows 7 , GTX650TI **Blender Version** Broken: 2.70a official Hash: 19e627c Worked: 2.68.0 r58537 Blender crashes and closes instantly if exporting object with faulty and flipped normals. At least that is what I think is the cause. I managed to test this and also pinpointed how to fix it. The cause seems to be some flipped normals on faces. If some of the normals on faces on the same mesh are flipped or it has 2 faces on it self(double sided) the export crashes. I think that the mesh in the attached scene was created the way that the faces were duplicated on the same location and flipped (to create 2sided effect maybe) but then the automerge vertexes was on and the mesh got messed up when points got welded. So some of the face-normals are up and some are down. **Exact steps for others to reproduce the error** 1, Select object in scene, **notice that some of the normals are messed up.** Dont fix them yet. 2, Try exporting fbx with the following setting on the FBXexporter: Everthing disabled, except "apply modifiers". Only export "mesh" tab selected also. (not sure if these settings matter but these were my settings) Sometimes it crashes with OBJ exporting also but that seems more random. Might have to do something with the export settings. 3, When pressing export button Blender closes instantly(crash). A file might be outputted but its corrupted. HOW TO FIX: If you select all the mesh in editmode and press "Recalculate Normals" the face-normals are on the same side. Try exporting it works. BUT: I tried exporting in 2.68 with the messed up normals and it worked fine there. The normals are just flipped and messed up but the exporting works there. This crashing seems to happen only in the recent builds.[export_crashtest.blend](https://archive.blender.org/developer/F91692/export_crashtest.blend)
Dancuka commented 2014-05-28 11:42:51 +02:00 (Migrated from localhost:3001)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Dancuka commented 2014-05-28 11:42:51 +02:00 (Migrated from localhost:3001)
Author

Added subscriber: @Dancuka

Added subscriber: @Dancuka
Dancuka commented 2014-05-28 11:48:29 +02:00 (Migrated from localhost:3001)
Author

This bug can cause some lost data and work if user has not saved in a while and the backups are not up to date. The crash is instant without warning and if file was not saved work is lost :(

This bug can cause some lost data and work if user has not saved in a while and the backups are not up to date. The crash is instant without warning and if file was not saved work is lost :(
Bastien Montagne was assigned by Sergey Sharybin 2014-05-28 11:50:39 +02:00

Added subscribers: @mont29, @Sergey

Added subscribers: @mont29, @Sergey

@mont29, mind looking into the report?

@mont29, mind looking into the report?

Yeah, in fact, it’s computing splitnormals themselves which crashes, also affects 'autosmooth' in 2.71 (current master).

Yeah, in fact, it’s computing splitnormals themselves which crashes, also affects 'autosmooth' in 2.71 (current master).
Author

This issue was referenced by bef5cb3aa2

This issue was referenced by bef5cb3aa2e5a7a992f3fa096943ba671c98e7b1

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit bef5cb3aa2.

Closed by commit bef5cb3aa2.
Author

This issue was referenced by 74cc3974fe

This issue was referenced by 74cc3974fea0422343b09bdd61e4d3924c62940a
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40405
No description provided.